- Adding support for public key encryption (GnuPG) relying on gpgme
- Adding support for public key signature of an archive
- While listing archive contents, directory show the size and average
  compression of the data they contain
- added the -vd switch to only display current directory under process for
  creation, diff, test, extraction and merging operations

from 2.4.14 to 2.4.15
- fixing bug met when reading an encrypted archive in sequential mode
- fixing bug met when reading an encrypted archive in sequential mode from
  an anonymous pipe
- changed option '-;' to -9 as '-;' does not work on all systems with getopt
  (only long option equivalent --min-digits worked) for dar, dar_cp,
  dar_manager, dar_xform and dar_slave commands.
- fixing bug met when restoring deleted files in sequential read mode and
  some directory where they should be "restored" are not readable or
  could not be restored earlier
- adding extra buffer to handle sequential read of encrypted archive
  when the last crypto block read some but not all clear data after
  encrypted one (the archive trailer).
- fixing compilation issue using clang
- fixing bug that prevent using -~ option with on-fly catalogue isolation
  in order to execute an user commande once on-fly isolation has completed
- added some autoconf magic to determine the correct (BSD/GNU) flag to
  use with sed
- new implementation of mask_list which is compatible with libc++

from 2.4.13 to 2.4.14
- limiting memory consumption of the cache layer to stay below 10 MiB, under
  certain circumstances (very large archive), it could grow up to an insane
  value like 50% or the available RAM. reducing to 10 MiB does not impact
  performance in a noticeable manner while it avoids system to swap out due
  to the libdar cache layer becoming huge.
- added --with-pkgconfigdir to define an alternative path for libdar
  pkgconfig file (to ease portability to FreeBSD)
- modified some Makefile.am for better FreeBSD support